--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,18 +1,18 @@
 .container {
-  /* 960px */
-  max-width: 60rem;
-  /* 100px */
-  margin: 6.25rem auto;
-  /* 10px */
-  padding: 0.625rem;
+  max-width: 960px;
+  margin: 100px auto;
+  padding: 10px;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
 }
 
 .item {
   background: steelblue;
   color: #fff;
-  /* 20px */
-  font-size: 1.25rem;
-  /* 50px */
-  padding: 3.125rem;
-  border: skyblue 0.063rem solid;
+
+  font-size: 20px;
+
+  padding: 20px;
+
+  border: skyblue 1px solid;
 }
