--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@
 
 body {
   font-family: 'Open Sans', sans-serif;
-  font-size: 1rem;
+  font-size: 16px;
   line-height: 1.5;
   color: #333;
   background: #f5f5f5;
