--- a/src/App.module.css
+++ b/src/App.module.css
@@ -3,7 +3,7 @@
   margin: 100px auto;
   padding: 10px;
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: repeat(3, 1fr);
 }
 
 .item {
