--- a/src/App.module.css
+++ b/src/App.module.css
@@ -4,6 +4,9 @@
   padding: 10px;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
+  /* column-gap: 10px;
+  row-gap: 10px; */
+  gap: 10px
 }
 
 .item {
@@ -12,6 +15,5 @@
   font-size: 20px;
   padding: 20px;
   border: skyblue 1px solid;
-  margin: 10px;
   
 }
