--- a/src/App.module.css
+++ b/src/App.module.css
@@ -4,9 +4,13 @@
   padding: 10px;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
+  gap: 10px;
   /* column-gap: 10px;
   row-gap: 10px; */
-  gap: 10px
+
+  /* grid-auto-rows: minmax(200px, auto); */
+  /* grid-template-rows: repeat(3, 1fr); */
+
 }
 
 .item {
