--- a/src/App.module.css
+++ b/src/App.module.css
@@ -5,9 +5,13 @@
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 10px;
+
+  /* align-items: end;
+  justify-content: end; */
+
+
   /* column-gap: 10px;
   row-gap: 10px; */
-
   /* grid-auto-rows: minmax(200px, auto); */
   /* grid-template-rows: repeat(3, 1fr); */
 
@@ -20,4 +24,26 @@
   padding: 20px;
   border: skyblue 1px solid;
   
+}
+
+.item:nth-of-type(1) {
+  background: #000;
+  /* grid-column-start: 1;
+  grid-column-end: 3; */
+  
+  /* starts from grid column line 1 and ends at grid column line 3 */
+  grid-column: 1 / 3;
+
+  /* grid column starts from grid line 1 and spans 2 grid columns */
+  /* grid-column: 1 / span 2; */
+}
+
+.item:nth-of-type(3) {
+  background: #333;
+  grid-row: 2 / 4;
+}
+
+.item:nth-of-type(4) {
+  background: #333;
+  grid-row: 2 / 4;
 }
