--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,8 @@
 body {
   font-family: 'Open Sans', sans-serif;
   font-size: 16px;
-  line-height: 1.5;
-  color: #333;
-  background: #f5f5f5;
+  /* line-height: 1.5; */
+  /* color: #333; */
+  /* background: #f5f5f5; */
+  height: 100vh;
 }
