--- a/src/Card.module.css
+++ b/src/Card.module.css
@@ -1,14 +1,75 @@
 .card {
-}
-
-.cardBgPurple {
+  background-color: #fff;
+  border-radius: 10px;
+  padding: 30px;
+  box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px;
+  margin-bottom: 10px;
 }
 
 .cardHeader {
+  display: flex;
+  align-items: center;
+  margin-bottom: 10px;
+}
+
+.cardHeader h3 {
+  font-size: 15px;
+}
+
+.cardHeader p {
+  opacity: 50%;
+}
+
+.cardImg {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  border: 2px solid #996ed9;
+  margin-right: 10px;
 }
 
 .cardLead {
+  font-size: 1.5rem;
+  font-weight: 500;
+  line-height: 1.3;
+  margin-bottom: 20px;
 }
 
 .cardQuote {
+  font-size: 15px;
+  font-weight: 500;
+  line-height: 1.4;
+  opacity: 70%;
+}
+
+.cardBgPurple {
+  background: hsl(263, 55%, 52%);
+  color: #fff;
+  background-image: url('../public/images/bg-pattern-quotation.svg');
+  background-repeat: no-repeat;
+  background-position: top 10px right 100px;
+}
+
+.cardBgGreyBlue {
+  background: hsl(217, 19%, 35%);
+  color: #fff;
+}
+
+.cardBgBlackBlue {
+  background: hsl(219, 29%, 14%);
+  color: #fff;
+}
+
+.card:nth-of-type(1) {
+  grid-column: 1 / 3;
+}
+
+.card:nth-of-type(4) {
+  grid-column: 2 / 4;
+  grid-row: 2;
+}
+
+.card:nth-of-type(5) {
+  grid-column: 4;
+  grid-row: 1 / 3;
 }
