--- a/src/Testimonials.module.css
+++ b/src/Testimonials.module.css
@@ -1,3 +1,8 @@
 .testimonials {
-  
+  max-width: 1440px;
+  margin: 100px auto;
+  padding: 20px;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 30px;
 }
