Added media queries to stack grid items on top of each other on smaller screens.

--- a/src/Testimonials.module.css
+++ b/src/Testimonials.module.css
@@ -6,3 +6,10 @@
   grid-template-columns: repeat(4, 1fr);
   gap: 30px;
 }
+
+@media (max-width: 768px) {
+  .testimonials {
+    grid-template-columns: 1fr;
+    width: 100%;
+  }
+}
