--- a/src/Card.module.css
+++ b/src/Card.module.css
@@ -73,3 +73,19 @@
   grid-column: 4;
   grid-row: 1 / 3;
 }
+
+@media (max-width: 768px) {
+  .card:nth-of-type(1) {
+    grid-column: 1;
+  }
+
+  .card:nth-of-type(4) {
+    grid-column: 1;
+    grid-row: 4;
+  }
+
+  .card:nth-of-type(5) {
+    grid-column: 1;
+    grid-row: 5;
+  }
+}
